--- a/mobilelele/src/main/resources/templates/fragments/navbar.html
+++ b/mobilelele/src/main/resources/templates/fragments/navbar.html
@@ -45,18 +45,21 @@
                         <a class="dropdown-item" href="/">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isLoggedIn()}">
+                    <form method="POST"
+                          th:action="@{/users/logout}">
                     <div class="form-inline my-2 my-lg-0 border px-3">
                         <div class="logged-user"
-                             text="Welcome, Gosho"></div>
-                        <a class="nav-link" href="/users/logout">Logout</a>
+                             th:text="${@currentUser.name}"></div>
+                        <input type="submit" class="nav-link" value="Logout"></input>
                     </div>
+                    </form>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isAnonymous}">
                     <a class="nav-link" href="/users/register">Register</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" th:if="${@currentUser.isAnonymous}">
                     <a class="nav-link" href="/users/login">Login</a>
                 </li>
 
