--- a/mobilelele/src/main/resources/templates/fragments/navbar.html
+++ b/mobilelele/src/main/resources/templates/fragments/navbar.html
@@ -33,7 +33,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/offers/all">All Offers</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" th:if="${@currentUser.isAdmin()}">
                     <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Admin
